syntax = "proto3";

package user_service;

option go_package = "github.com/example/user-service/pkg/pb/user_service";

import "api/user_service/model.proto";

message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
}

message CreateUserResponse {
  User user = 1;
}